Dropdown menu z-index issue resolved
The dropdown was appearing behind the dashboard tab menu, so I simply set a z-index for the dropdown which would not allow the problem to occur.

--- a/app/www/css/nav.css
+++ b/app/www/css/nav.css
@@ -29,6 +29,7 @@ div.dropdown {
     float: right;
 }
 div.submenu {
+    z-index: 99;
     position: fixed;
     width: 110px;
     display: none;
